<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="6"
        android:padding="5dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/mainButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights"
            android:backgroundTint="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/mainText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="40sp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:gravity="center_vertical"
            android:layout_weight="4"/>

        <ImageButton
            android:id="@+id/logoutButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_exit_to_app_24"
            android:backgroundTint="@android:color/darker_gray"/>

    </LinearLayout>

    <SearchView
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/searchUser" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:padding="5dp" />

    <LinearLayout
        android:id="@+id/noFriends"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:padding="5dp"
        android:weightSum="2"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/noFriendsImage"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_baseline_emoji_emotions_24"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/noFriendsText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/noFriends"
            android:textSize="20sp"
            android:gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="5dp"
        android:weightSum="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/chatButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:text="@string/chatLabel"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/friendsButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:text="@string/friendsLabel"/>

    </LinearLayout>

</LinearLayout>